[package]
name = "backend-examples"
version = "0.1.0"
edition = "2021"
publish = false

[[example]]
name = "using_mocks"
path = "using_mocks.rs"

[dependencies]
sh-backend-lib = { path = "../lib", features = ["mocks"] }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
shc-indexer-db = { path = "../../client/indexer-db" }
chrono = { workspace = true }