[package]
edition = "2021"
name = "sh-msp-backend-lib"
version = "0.5.1"

[dependencies]
alloy-core = { version = "0.8", features = ["serde"] }
alloy-signer = "0.8"
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
axum-extra = { workspace = true }
axum-jwt = { workspace = true }
base64 = { workspace = true }
bigdecimal = { workspace = true }
bytes = "1.9"
cfg-if = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
codec = { workspace = true }
diesel = { workspace = true }
diesel-async = { workspace = true }
frame-support = { workspace = true }
futures = { workspace = true }
headers = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }
http = { workspace = true }
jsonrpsee = { workspace = true, features = ["client", "ws-client"] }
jsonwebtoken = { workspace = true }
mime_guess = { workspace = true }
parking_lot = { workspace = true }
rand = { workspace = true }
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "stream",
] }
rustls = { workspace = true }
rustls-pemfile = { workspace = true }
rustls-platform-verifier = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = "3.15.1"
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-postgres = { workspace = true }
tokio-postgres-rustls = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
toml = { workspace = true }
tower-http = { workspace = true }
tracing = { workspace = true }
tracing-bunyan-formatter = { workspace = true }
tracing-subscriber = { workspace = true }
trie-db = { workspace = true }
uuid = { version = "1.18", features = ["v7"] }

# Workspace dependencies
pallet-storage-providers = { workspace = true, features = ["std"] }
sc-network = { workspace = true }
sc-network-types = { workspace = true }
shc-common = { workspace = true, default-features = true }
shc-file-manager = { workspace = true }
shc-indexer-db = { workspace = true, default-features = true }
shc-rpc = { workspace = true, features = ["std"] }
shp-constants = { workspace = true }
shp-file-metadata = { workspace = true }
shp-types = { workspace = true }
sp-core = { workspace = true }
sp-runtime = { workspace = true }
sp-trie = { workspace = true }

# Optional deps
sh-solochain-evm-runtime = { workspace = true, features = [
    "std",
], optional = true }

[dev-dependencies]
alloy-signer = "0.8"
axum-test = { workspace = true }
diesel_migrations = { version = "2.2", features = ["postgres"] }
futures = { workspace = true }
testcontainers = "0.24"
testcontainers-modules = { version = "0.12", features = ["postgres"] }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = ["solochain"]
mocks = ["solochain"]

# Runtime selection
solochain = ["dep:sh-solochain-evm-runtime"]
