[package]
name = "shc-actors-derive"
description = "Procedural macros for the StorageHub actors framework"
version = "0.1.0"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0.79"
quote = "1.0.35"
syn = { version = "2.0.52", features = ["full", "extra-traits"] }
once_cell = "1.18.0"

# Local dependencies
shc-actors-framework = { workspace = true }
