[package]
name = "shc-actors-derive"
description = "Procedural macros for the StorageHub actors framework"
version = "0.3.4"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
trybuild = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
once_cell = { workspace = true }

# Local dependencies

shc-actors-framework = { workspace = true }
