[package]
authors = { workspace = true }
description = "Procedural macros for the StorageHub actors framework"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "shc-actors-derive"
repository = { workspace = true }
version = "0.4.0"

[lints]
workspace = true

[lib]
proc-macro = true

[dependencies]
once_cell = { workspace = true }
proc-macro2 = { workspace = true }
quote = { workspace = true }
syn = { workspace = true, features = ["full", "extra-traits"] }
trybuild = { workspace = true }

# Local dependencies

shc-actors-framework = { workspace = true }
