[package]
name = "shc-actors-framework"
description = "The definitions for the actors framework used in StorageHub"
version = "0.4.2"
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

sc-tracing = { workspace = true }
sc-service = { workspace = true }
sc-utils = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

shc-telemetry = { workspace = true }
