[package]
authors = { workspace = true }
description = "The definitions for the actors framework used in StorageHub"
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
name = "shc-actors-framework"
repository = { workspace = true }
version = "0.4.0"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }

sc-service = { workspace = true }
sc-tracing = { workspace = true }
sc-utils = { workspace = true }

sp-core = { workspace = true }
sp-runtime = { workspace = true }

shc-telemetry = { workspace = true }
