[package]
name = "shc-blockchain-service"
version = "0.4.0"
description = "The blockchain service for StorageHub. Responsible for listening to the blockchain and interacting with the StorageHub runtime."
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
array-bytes = { workspace = true }
async-trait = { workspace = true }
codec = { workspace = true }
futures = { workspace = true }
lazy-static = { workspace = true }
log = { workspace = true }
rocksdb = { workspace = true }
serde = { workspace = true, default-features = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }

# Substrate
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment = { workspace = true }
sc-client-api = { workspace = true }
sc-service = { workspace = true }
sc-network = { workspace = true }
sc-network-types = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sc-utils = { workspace = true }
sc-tracing = { workspace = true }
sp-api = { workspace = true }
sp-blockchain = { workspace = true }
sp-core = { workspace = true, default-features = true }
sp-keystore = { workspace = true }
sp-consensus = { workspace = true }
sp-runtime = { workspace = true, default-features = true }
substrate-frame-rpc-system = { workspace = true }

# Polkadot
polkadot-runtime-common = { workspace = true }
polkadot-primitives = { workspace = true }

# Local
shc-actors-framework = { workspace = true }
shc-actors-derive = { workspace = true }
shc-blockchain-service-db = { workspace = true }
shc-forest-manager = { workspace = true }
shc-common = { workspace = true }
shc-telemetry = { workspace = true }
shp-constants = { workspace = true }
shp-file-key-verifier = { workspace = true }
shp-file-metadata = { workspace = true }
shp-tx-implicits-runtime-api = { workspace = true }

# Local pallets
pallet-file-system = { workspace = true }
pallet-file-system-runtime-api = { workspace = true }
pallet-payment-streams = { workspace = true }
pallet-payment-streams-runtime-api = { workspace = true }
pallet-proofs-dealer = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
pallet-storage-providers = { workspace = true }
pallet-storage-providers-runtime-api = { workspace = true }
