[package]
name = "shc-common"
version = "0.1.0"
description = "Common types, traits and utilities shared by other client crates."
homepage = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
edition = { workspace = true }
publish = false

[lib]

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
bincode = { workspace = true }
codec = { workspace = true }
rocksdb = { workspace = true }
scale-info = { workspace = true }
serde = { workspace = true, default-features = true }
trie-db = { workspace = true }
lazy-static = { workspace = true }
log = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tracing = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
uuid = { workspace = true }

# Substrate
frame-benchmarking = { workspace = true }
frame-metadata-hash-extension = { workspace = true }
frame-support = { workspace = true }
frame-system = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-client-api = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-service = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-core = { workspace = true }
sp-blockchain = { workspace = true }
sp-keystore = { workspace = true }
sp-trie = { workspace = true, default-features = true }
sp-io = { workspace = true, default-features = true }
sp-runtime = { workspace = true, default-features = true }
sp-std = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Polkadot
polkadot-primitives = { workspace = true }

# Cumulus
cumulus-client-service = { workspace = true }
cumulus-primitives-core = { workspace = true }
cumulus-primitives-storage-weight-reclaim = { workspace = true }

# Frontier
fp-account = { workspace = true }

# Local
storage-hub-runtime = { workspace = true }
shp-constants = { workspace = true }
shp-file-key-verifier = { workspace = true }
shp-file-metadata = { workspace = true }
shp-forest-verifier = { workspace = true }
shp-traits = { workspace = true }
shp-opaque = { workspace = true }

# Local pallets
pallet-file-system = { workspace = true }
pallet-file-system-runtime-api = { workspace = true }
pallet-payment-streams = { workspace = true }
pallet-payment-streams-runtime-api = { workspace = true }
pallet-proofs-dealer = { workspace = true }
pallet-proofs-dealer-runtime-api = { workspace = true }
pallet-storage-providers = { workspace = true }
pallet-storage-providers-runtime-api = { workspace = true }
pallet-transaction-payment = { workspace = true }

[dev-dependencies]
tempfile = "3.8"

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-benchmarking/std",
	"frame-system/std",
	"fp-account/std",
	"sc-executor/std",
	"sp-core/std",
	"sp-keystore/std",
	"sp-trie/std",
	"sp-io/std",
	"sp-runtime/std",
	"sp-std/std",
	"trie-db/std",
	"tokio/full",
	"tracing/std",
	"serde_json/std",
	"chrono/std",
	"polkadot-primitives/std",
	"cumulus-primitives-core/std",
	"shp-constants/std",
	"shp-file-key-verifier/std",
	"shp-file-metadata/std",
	"shp-forest-verifier/std",
	"shp-traits/std",
	"pallet-file-system/std",
	"pallet-payment-streams/std",
	"pallet-proofs-dealer/std",
	"pallet-storage-providers/std",
	"pallet-transaction-payment/std",
]
runtime-benchmarks = [
	"frame-benchmarking/runtime-benchmarks",
	"frame-system/runtime-benchmarks",
	"pallet-file-system/runtime-benchmarks",
	"pallet-payment-streams/runtime-benchmarks",
	"pallet-proofs-dealer/runtime-benchmarks",
	"pallet-storage-providers/runtime-benchmarks",
	"pallet-transaction-payment/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
]
